# nfc_server

./: .env.example  .gitignore  README.md  pyproject.toml  start.ps1
app/: auth.py  database.py  main.py  run.py  utils.py
app/metrics/: base.py  metric_tracker.py
app/models/: __init__.py  activity.py  base.py  insight.py  interruption.py  metrics.py  pattern.py  routine.py  tag.py  user.py
app/routers/: activities.py  base.py  base_router.py  example_tag_router_refactor.py  insights.py  patterns.py  routines.py  tags.py  users.py
app/schemas/: activity.py  tag.py  user.py
app/services/: activity_metrics.py  example_activity_metrics.py
